feat: semester group and member function added
