# routes/SemesterRoute.js
@@ -8,5 +8,9 @@ router.post('/', SemesterController.createSemester);
 router.get('/:semesterId', SemesterController.getSemester);
 router.put('/:semesterId', SemesterController.updateSemester);
 router.delete('/:semesterId', SemesterController.deleteSemester);
+router.post('/:semesterId/member', SemesterController.addSemesterMember);
+router.delete('/:semesterId/member', SemesterController.deleteSemesterMember);
+router.post('/:semesterId/group', SemesterController.addSemesterGroup);
+router.delete('/:semesterId/group', SemesterController.deleteSemesterGroup);
 
 module.exports = router;
